kubernetes/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      name: ui-port
    - port: 50000
      targetPort: 50000
      name: jnlp-port
  selector:
    app: jenkins
