kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: jenkins
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: jenkins
              servicePort: 80
